[project]
name = "wall"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Jozef Steinhübl", email = "contact@xhyrom.dev"},
]
readme = "README.md"
license = {text = "Apache License 2.0"}

[project.scripts]
wall = "wall:__main__.run"

[tool.pdm]
distribution = false
